--- a/todos.html
+++ b/todos.html
@@ -87,9 +87,13 @@
     <h2>Lists for {{userId}}</h2>
     {{> addList}}
     <ul>
-        {{#each list}}
-        <li><a href="{{pathFor route='listPage'}}">{{name}}</a></li>
-        {{/each}}
+        {{#if Template.subscriptionsReady}}
+            {{#each list}}
+            <li><a href="{{pathFor route='listPage'}}">{{name}}</a></li>
+            {{/each}}
+        {{else}}
+            <li>Loading...</li>
+        {{/if}}
     </ul>
 </template>
 
@@ -102,4 +106,9 @@
 <template name="listPage">
     <h2>{{name}} Tasks</h2>
     {{> todos}}
+</template>
+
+<!-- Templates for loading -->
+<template name="loading">
+    <p>Loading...</p>
 </template>
