--- a/todos.html
+++ b/todos.html
@@ -1,3 +1,5 @@
+<!-- FINISHED SECOND METEOR APPLICATION -->
+
 <!-- TEMPLATES  -->
 
 <!-- Templates for main screens and navigation -->
@@ -31,7 +33,9 @@
 <!-- Templates registration and login -->
 
 <template name="register">
-    <h2>Register</h2>
+    <h2
+    
+    >Register</h2>
     <form class="register">
         <p>Email: <input type="email" name="email" required></p>
         <p>Password: <input type="password" name="password" required></p>
